--- a/index.html
+++ b/index.html
@@ -129,17 +129,6 @@
 		<!-- Header -->
     <section id="header">
       <div class="inner">
-	  <!--
-        <a href="" id="linkHeaderPic" target="_blank" style="border-bottom: none;">
-          <img id="pvpicheader" src="images/Headerbild_Dach.png">
-        </a>
-        <h3>
-          &nbsp;&nbsp;&nbsp;&nbsp;
-          <strong><span class="trn">dach</span></strong>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <strong><font style="color:grey"><span class="trn">fassade</span></font></strong>
-        </h3>
-		-->
         <h1 class="trn">mainTitle</h1>
         <ul class="actions">
           <li>
@@ -182,7 +171,7 @@
               </h4>
               <div class="roof-loading"></div>
 			  <h4 class="show-roof"><span id="eignungLong"></span></h4>
-			  <h4 class="show-roof"><span id="score"></span></h4>
+			  <!-- <h4 class="show-roof"><span id="score"></span></h4> -->
             </header>
           </div>
           <div class="6u$ 12u$(medium) important(medium)">
@@ -255,6 +244,25 @@
             <li><a href="" class="button" id="hintButton" target="_blank"><span class="trn">hintButton</span></a></li>
           </ul>             
           <div class="12u$ 12u$(medium) important(medium) show-roof arrows">
+            <a href="#five" class="scrolly icon major fa-angle-double-down"></a>
+          </div>          
+        </div>
+      </section>
+
+    <!-- Five: Link Library -->
+      <section id="five" class="main style1 special">
+        <div class="container">
+          <header class="major">
+            <span class="icon major fa-book"></span>
+            <h2><span class="trn">TitelLibrary</span></h2>
+          </header>
+          <p>
+            <span class="trn">TextLibrary</span>
+          </p>		  
+          <ul class="actions uniform">
+            <li><a href="" class="button" id="libButton" target="_blank"><span class="trn">libButton</span></a></li>
+          </ul>
+          <div class="12u$ 12u$(medium) important(medium) show-roof arrows">
             <a href="#one" class="scrolly icon major fa-angle-double-up"></a>
           </div>          
         </div>
@@ -269,9 +277,9 @@
       </ul>
       <ul class="copyright">
         <li><span class="trn">copyrightMain</span></li>
-        <li>v 0.1</li>
+        <li>v 0.</li>
         <li><span class="trn">contact</span></li>
-        <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+        <li><span class="trn">legal</span></li>
       </ul>
     </section>
 
