--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="news_keywords" content="">
+    <meta name="description" content="Kann ich für mein Gebäude eine Erdwärmesonde bohren? kann-ich-bohren.ch ermöglicht eine einfach Beantwortung dieser Frage anhand der Adresse und auf Basis von kantonalen Geodaten.">
+    <meta name="keywords" content="Energie, Erdwärme, Erdwärmesonde, Geothermie, Kanton, Geodaten, Daten, Wärme, Heizung">
+    <meta name="news_keywords" content="Energie, Erdwärme, Erdwärmesonde, Geothermie, Kanton, Geodaten, Daten, Wärme, Heizung">
     <meta name="author" content="Bundesamt für Energie BFE">
 
     <meta property="og:site_name" content="kann-ich-bohren.ch">
@@ -35,15 +35,15 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="WebApplication">
     <meta property="og:url" content="http://www.kann-ich-bohren.ch">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://www.uvek-gis.admin.ch/BFE/kann-ich-bohren/images/appKannichbohren.png">
     <meta property="og:locale" content="de_CH" />
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@EnergieSchweiz">
-		<meta name="twitter:creator" content="@EnergieSchweiz">
+	<meta name="twitter:creator" content="@EnergieSchweiz">
     <meta name="twitter:title" content="kann-ich-bohren.ch">
-    <meta name="twitter:description" content="">
-    <meta name="twitter:image" content="">
+    <meta name="twitter:description" content="Kann ich für mein Gebäude eine Erdwärmesonde bohren? kann-ich-bohren.ch ermöglicht eine einfach Beantwortung dieser Frage anhand der Adresse und auf Basis von kantonalen Geodaten.">
+    <meta name="twitter:image" content="https://www.uvek-gis.admin.ch/BFE/kann-ich-bohren/images/appKannichbohren.png">
     <meta name="twitter:url" content="http://www.kann-ich-bohren.ch">
 
 
@@ -88,7 +88,7 @@
             </div>
           </div>
           <div id="lang">
-            <a href="?lang=de" class="langde">D</a>|<a href="?lang=fr" class="langfr">F</a>|<a href="?lang=it" class="langfr">I</a>|<a href="?lang=en" class="langfr">E</a>
+            <a href="?lang=de" class="langde">D</a>|<a href="?lang=fr" class="langfr">F</a>|<a href="?lang=it" class="langfr">I</a><!--|<a href="?lang=en" class="langfr">E</a>-->
           </div>
         </div>
       </div>
@@ -108,7 +108,7 @@
     <section id="ech" class="main style1 special hide" style="padding: 0 !important">
       <div class="container">
         <div class="100%">
-            <a href="http://www.energieschweiz.ch" target="_blank"><div class="logoech" id="logoech"></div></a>
+            <a href="http://www.energieschweiz.ch" target="_blank" rel="noopener"><div class="logoech" id="logoech"></div></a>
           <div id="lang">
             <a href="?lang=de&header=1" class="langde">D</a>|<a href="?lang=fr&header=1" class="langfr">F</a>|<a href="?lang=it&header=1" class="langfr">I</a>|<a href="?lang=en&header=1" class="langfr">E</a>
           </div>
@@ -215,7 +215,7 @@
             <h2><span class="trn">TitelLinkKanton</span></h2>
           </header>	  
           <ul class="actions uniform">
-            <li><a href="" class="button" id="cantonButton" target="_blank"><span class="trn">cantonButton</span></a></li>
+            <li><a href="" class="button" id="cantonButton" target="_blank" rel="noopener"><span class="trn">cantonButton</span></a></li>
           </ul> 
          
           <div class="12u$ 12u$(medium) important(medium) show-roof arrows">
@@ -224,8 +224,30 @@
         </div>
       </section>
 
-    <!-- Four: Hinweis -->
+    <!-- Three: Weitere Infos -->
       <section id="four" class="main style2 special">
+        <div class="container">
+          <header class="major">
+            <span class="icon major fa-external-link"></span>
+            <h2><span class="trn">TitelLinkInfos</span></h2>
+          </header>	  
+          <p>
+            <span class="trn">WeiterInfos1</span>
+          </p>
+          <p>
+            <span class="trn">WeiterInfos2</span>
+          </p>
+          <p>
+            <span class="trn">WeiterInfos3</span>
+          </p>		  
+          <div class="12u$ 12u$(medium) important(medium) show-roof arrows">
+            <a href="#five" class="scrolly icon major fa-angle-double-down"></a>
+          </div>          
+        </div>
+      </section>
+
+    <!-- Four: Hinweis -->
+      <section id="five" class="main style1 special">
         <div class="container">
           <header class="major">
             <span class="icon major fa-info-circle"></span>
@@ -240,17 +262,20 @@
           <p>
             <span class="trn">hint3</span>
           </p>
+          <p>
+            <span class="trn">hint4</span>
+          </p>
           <ul class="actions uniform">
             <li><a href="" class="button" id="hintButton" target="_blank"><span class="trn">hintButton</span></a></li>
           </ul>             
           <div class="12u$ 12u$(medium) important(medium) show-roof arrows">
-            <a href="#five" class="scrolly icon major fa-angle-double-down"></a>
+            <a href="#six" class="scrolly icon major fa-angle-double-down"></a>
           </div>          
         </div>
       </section>
 
     <!-- Five: Link Library -->
-      <section id="five" class="main style1 special">
+      <section id="six" class="main style2 special">
         <div class="container">
           <header class="major">
             <span class="icon major fa-book"></span>
@@ -260,7 +285,7 @@
             <span class="trn">TextLibrary</span>
           </p>		  
           <ul class="actions uniform">
-            <li><a href="https://github.com/SFOE/SuitabilityGeothermalDrillingSwitzerland" class="button" id="libButton" target="_blank"><span class="trn">libButton</span></a></li>
+            <li><a href="https://github.com/SFOE/SuitabilityGeothermalDrillingSwitzerland" class="button" id="libButton" target="_blank" rel="noopener"><span class="trn">libButton</span></a></li>
           </ul>
           <div class="12u$ 12u$(medium) important(medium) show-roof arrows">
             <a href="#one" class="scrolly icon major fa-angle-double-up"></a>
@@ -271,8 +296,8 @@
 		<!-- Footer -->
     <section id="footer">
       <ul class="icons">
-        <li><a id="socialTwitter" href="" class="icon alt fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
-        <li><a id="socialFB" href="" class="icon alt fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
+        <li><a id="socialTwitter" href="" class="icon alt fa-twitter" target="_blank" rel="noopener"><span class="label">Twitter</span></a></li>
+        <li><a id="socialFB" href="" class="icon alt fa-facebook" target="_blank" rel="noopener"><span class="label">Facebook</span></a></li>
         <li><a id="socialMail" href="" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
       </ul>
       <ul class="copyright">
