--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
           </div>
           <div id="lang">
-            <a href="?lang=de" class="langde">D</a>|<a href="?lang=fr" class="langfr">F</a>|<a href="?lang=it" class="langfr">I</a><!--|<a href="?lang=en" class="langfr">E</a>-->
+            <a href="?lang=de" class="langde">D</a>|<a href="?lang=fr" class="langfr">F</a>|<a href="?lang=it" class="langfr">I</a>|<a href="?lang=en" class="langfr">E</a>
           </div>
         </div>
       </div>
@@ -302,7 +302,7 @@
       </ul>
       <ul class="copyright">
         <li><span class="trn">copyrightMain</span></li>
-        <li>v 1.0</li>
+        <li><a target="_blank" rel="noopener" href="https://github.com/SFOE/SuitabilityGeothermalDrillingSwitzerland-WebApp/releases">v 1.1</a></li>
         <li><span class="trn">contact</span></li>
         <li><span class="trn">legal</span></li>
       </ul>
@@ -331,6 +331,7 @@
     <script src="assets/js/translations.js"></script>
     <script src="assets/js/init.js"></script>
     <script defer src="assets/js/SuitabilityGeothermalDrillingSwitzerland.min.js"></script>
+	<script src="assets/js/d3.v7.min.js"></script>
 
     <script>
       $(document).ready(function() {
